css/mining-truth.css
h1 {
 font-family: arial black, helvetica, sans-serif;
 font-size: 2em;
 font-weight: bolder;
padding-top: 1px;
padding-left: 16px;
 padding-bottom: 6px;
 color: #663300;
 }
h1.homepage {
 font-family: arial black, helvetica, sans-serif;
 font-size: 2.7em;
 font-weight: bolder;
 padding-right: 5px;
 color: #FFFFFF;

}
@media only screen and (max-width: 600px) {
h1.homepage {
font-family: arial black, helvetica, sans-serif;
font-size: 2em;
font-weight: bolder;
padding-right: 5px;
color: #FFFFFF;
}
.bottom-left {
position: absolute;
bottom: 10px;
left: 30px;}
}

@media only screen and (max-width: 400px) {
h1.homepage {
font-family: arial black, helvetica, sans-serif;
font-size: 1.6em;
font-weight: bolder;
padding-right: 10px;
color: #FFFFFF;
-webkit-text-stroke-width: .25px;
   -webkit-text-stroke-color: #663300;
}
.bottom-left {
position: absolute;
bottom: 0px;
left: 10px;}
}
@media only screen and (max-width: 300px) {
h1.homepage {
font-family: arial black, helvetica, sans-serif;
font-size: 1.2em;
font-weight: bolder;
padding-right: 10px;
color: #FFFFFF;
-webkit-text-stroke-width: .25px;
   -webkit-text-stroke-color: #663300;

}
.bottom-left {
position: absolute;
bottom: 0px;
left: 10px;}
}
h2 {
font-family: arial black, helvetica, sans-serif;
 font-size: 1.4em;
 font-weight: bolder;
 color: #663300;
}

h3 {
 }

p {
font-family: arial, helvetica, sans-serif;
padding-top: 4px;
line-height: 1.4em;
}

.bottom-left {
position: absolute;
bottom: 10px;
left: 30px;}

a {
 color: #cc6600;
}

figure {
  padding-top: 10px;
  padding-bottom: 15px;
  padding-left: auto;
  padding-right: auto;
}

figcaption {
font-family: arial, helvetica, sans-serif;
font-size: .8em;
line-height: 1.4em;
font-weight: bold;
padding: 10px;
text-align: inherit;
display: inline-block;
background-color: #d3d3d3;
}

.navbar-collapse {
 overflow-x: visible;
 -webkit-overflow-scrolling: touch;
 border-top: 1px transparent;

}

.navbar-brand > img {
 display: block;

}

.navbar-brand {
 float: left;
 height: 50px;
 padding: 2px 2px 0px 10px;
 font-size: 18px;
 line-height: 50px;
 max-width: 940px;

}

.navbar-inverse {
 background-color: #663300;
 border-color: #663300;

}

.navbar-inverse .navbar-nav > li > a {
 color: #d3d3d3;
}

.navbar-inverse .navbar-nav > li > a:hover,
.navbar-inverse .navbar-nav > li > a:focus {
 color: #ffffff;
 background-color: #cc6600;
}
.navbar-inverse .navbar-nav > .active > a,
.navbar-inverse .navbar-nav > .active > a:hover,
.navbar-inverse .navbar-nav > .active > a:focus {
 color: #cc6600;
 background-color: #663300;
}

.navbar-inverse .navbar-nav > .disabled > a:hover,
.navbar-inverse .navbar-nav > .disabled > a:focus {
 color: #ffffff;
 background-color: transparent;
}

.navbar-inverse .navbar-toggle {
 border-color: #cc6600;
}
.navbar-inverse .navbar-toggle:hover,
.navbar-inverse .navbar-toggle:focus {
 background-color: #cc6600;
}
.navbar-inverse .navbar-toggle .icon-bar {
 background-color: #ffffff;
}

.btn-default {
 color: #ffffff;
 background-color: #cc6600;
 border-color: #663300;
}

.btn-default:hover {
 color: #663300;
 background-color: #ffffff;
 border-color: #663300;
}

body {
   padding-top: 70px;
   font: 100% arial, helvetica, sans-serif;
font-size: 1.6em;
}

article {
 -webkit-columns: 2 200px;
 -moz-columns: 2 200px;
 columns: 2 200px;
}

footer {
   padding: 15px 0;
text-align: center;
}

.container {
  max-width: 940px;

}

body {
 max-width: 940px;
 margin-left: auto;
 margin-right: auto;
 margin-top: 0;
 padding-top: 10px;
}


   /*RESPONSIVE EMBED */

   .video-container {
     position:relative;
     padding-bottom:56.25%;
     padding-top:30px;
     height:0;
     overflow:hidden;
   }

   .video-container iframe, .video-container object, .video-container embed {
     position:absolute;
     top:0;
     left:0;
     width:100%;
     height:100%;
   }

